[package]
name = "text_hidden"
version = "0.1.0"
edition = "2021"
authors = ["coderpwh"]
description = "A simple text hidden tool"
license = "MIT"
repository = "https://github.com/pwh-pwh/text_hidden"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
